[gd_scene load_steps=3 format=3 uid="uid://cjsw8pjt5pkrt"]

[ext_resource type="Script" uid="uid://0ig7l17kqfin" path="res://Utilities/interactable.gd" id="1_gqpkk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_gqpkk"]
size = Vector3(1.2, 1, 1.1)

[node name="Interactable" type="Node3D"]
script = ExtResource("1_gqpkk")

[node name="InteractArea" type="Area3D" parent="."]
collision_layer = 65536

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.35000002)
shape = SubResource("BoxShape3D_gqpkk")

[connection signal="body_entered" from="InteractArea" to="." method="_on_interact_area_body_entered"]
